--- a/src/theme/common.css
+++ b/src/theme/common.css
@@ -12,7 +12,25 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-
+  font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media only screen and (max-width: 1280px) {
+  html {
+    font-size: 14px !important;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  html {
+    font-size: 12px !important;
+  }
+}
+
+@media only screen and (max-width: 374px) {
+  html {
+    font-size: 10px !important;
+  }
 }
