--- a/src/theme/common.css
+++ b/src/theme/common.css
@@ -15,7 +15,10 @@ body {
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* position: relative; */
+}
+
+#root {
+  min-height: 100%;
 }
 
 @media only screen and (max-width: 1280px) {
